# backend-services

./: .dockerignore  .protovend.yml  Cargo.toml  Dockerfile
.github/workflows/: build.yaml
messaging/: Cargo.toml  build.rs
messaging/src/: headpose_service.rs  main.rs  ws_service.rs
rtcpeer/: Cargo.toml
